# kclock.k5s

./: CMakeLists.txt  README  kclock.cpp  kclock.h  org.kde.kclock.desktop
libkscreensaver/: kscreensaver.cpp  kscreensaver.h  kscreensaver_export.h  kscreensaver_vroot.h  main.cpp
